{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 36,
  "lineage": "b62b17cb-a2a2-3341-d3d7-916868ad6f2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3ae204e19952e50",
            "arn": "arn:aws:ec2:us-east-1:483259568624:elastic-ip/eipalloc-0c3ae204e19952e50",
            "association_id": "eipassoc-0788f265b3c77a954",
            "domain": "vpc",
            "id": "eipalloc-0c3ae204e19952e50",
            "instance": "i-09e61a360477b5de1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06288fd4a8c9f1ed2",
            "private_dns": "ip-10-0-1-83.ec2.internal",
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-44-205-182-119.compute-1.amazonaws.com",
            "public_ip": "44.205.182.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-bastion-eip",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-bastion-eip",
              "Project": "techcorp"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a5c7c274d72520f",
            "arn": "arn:aws:ec2:us-east-1:483259568624:elastic-ip/eipalloc-01a5c7c274d72520f",
            "association_id": "eipassoc-01a80c6b8fb90475a",
            "domain": "vpc",
            "id": "eipalloc-01a5c7c274d72520f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-072decf2f97332825",
            "private_dns": "ip-10-0-1-235.ec2.internal",
            "private_ip": "10.0.1.235",
            "public_dns": "ec2-34-199-21-166.compute-1.amazonaws.com",
            "public_ip": "34.199.21.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-nat-eip-1",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-nat-eip-1",
              "Project": "techcorp"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0207e0dc7610f1843",
            "arn": "arn:aws:ec2:us-east-1:483259568624:elastic-ip/eipalloc-0207e0dc7610f1843",
            "association_id": "eipassoc-0c512528f5acae9a6",
            "domain": "vpc",
            "id": "eipalloc-0207e0dc7610f1843",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f9b1a5b8440fea60",
            "private_dns": "ip-10-0-2-129.ec2.internal",
            "private_ip": "10.0.2.129",
            "public_dns": "ec2-54-82-194-250.compute-1.amazonaws.com",
            "public_ip": "54.82.194.250",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-nat-eip-2",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-nat-eip-2",
              "Project": "techcorp"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cfcf01fb5836121",
            "arn": "arn:aws:ec2:us-east-1:483259568624:instance/i-09e61a360477b5de1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e61a360477b5de1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "altschoolmonth1-assessmentkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06288fd4a8c9f1ed2",
            "private_dns": "ip-10-0-1-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-3-237-95-100.compute-1.amazonaws.com",
            "public_ip": "3.237.95.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0779d3c1d19124793",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac4960cff6e71c4a",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-bastion-host",
              "Project": "techcorp",
              "Role": "bastion"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-bastion-host",
              "Project": "techcorp",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03961e299e5fa2547"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cfcf01fb5836121",
            "arn": "arn:aws:ec2:us-east-1:483259568624:instance/i-0dc375bd740ae5d41",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc375bd740ae5d41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "altschoolmonth1-assessmentkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e09f20b6efa8f97",
            "private_dns": "ip-10-0-3-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d98a53ddea95364e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f4e90b749e3714d",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-db-server",
              "Project": "techcorp",
              "Role": "database"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-db-server",
              "Project": "techcorp",
              "Role": "database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a62df9b4fa4d1075"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cfcf01fb5836121",
            "arn": "arn:aws:ec2:us-east-1:483259568624:instance/i-037c8620444241951",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037c8620444241951",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "altschoolmonth1-assessmentkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a7b2a7e1efb2e16f",
            "private_dns": "ip-10-0-3-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e6867a2923883107",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f4e90b749e3714d",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-web-server-1",
              "Project": "techcorp",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-web-server-1",
              "Project": "techcorp",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eafe72a0764f0f3b"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cfcf01fb5836121",
            "arn": "arn:aws:ec2:us-east-1:483259568624:instance/i-001a2b79412c46d1b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001a2b79412c46d1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "altschoolmonth1-assessmentkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07098740b175bbac4",
            "private_dns": "ip-10-0-4-192.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0440fb8393c60ae36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cfa69d37cfd0bc36",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-web-server-2",
              "Project": "techcorp",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-web-server-2",
              "Project": "techcorp",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eafe72a0764f0f3b"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:internet-gateway/igw-0ac2622f627466cfb",
            "id": "igw-0ac2622f627466cfb",
            "owner_id": "483259568624",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-igw",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-igw",
              "Project": "techcorp"
            },
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:483259568624:loadbalancer/app/techcorp-app-alb/1ec4af4b58169367",
            "arn_suffix": "app/techcorp-app-alb/1ec4af4b58169367",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "techcorp-app-alb-1624616228.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:483259568624:loadbalancer/app/techcorp-app-alb/1ec4af4b58169367",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techcorp-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ed39040ce9ff44c0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ac4960cff6e71c4a"
              },
              {
                "subnet_id": "subnet-0ef66bf5a60d571d0"
              }
            ],
            "subnets": [
              "subnet-0ac4960cff6e71c4a",
              "subnet-0ef66bf5a60d571d0"
            ],
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-app-alb",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-app-alb",
              "Project": "techcorp"
            },
            "vpc_id": "vpc-03e12fdd09f4c2b53",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:483259568624:listener/app/techcorp-app-alb/1ec4af4b58169367/e8ae3a86c6545a0b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:483259568624:targetgroup/techcorp-web-tg/e532db14da765435",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:483259568624:listener/app/techcorp-app-alb/1ec4af4b58169367/e8ae3a86c6545a0b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:483259568624:loadbalancer/app/techcorp-app-alb/1ec4af4b58169367",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:483259568624:targetgroup/techcorp-web-tg/e532db14da765435",
            "arn_suffix": "targetgroup/techcorp-web-tg/e532db14da765435",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:483259568624:targetgroup/techcorp-web-tg/e532db14da765435",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:483259568624:loadbalancer/app/techcorp-app-alb/1ec4af4b58169367"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "techcorp-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-web-tg",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-web-tg",
              "Project": "techcorp"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_1_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:483259568624:targetgroup/techcorp-web-tg/e532db14da765435-20260403150118235500000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:483259568624:targetgroup/techcorp-web-tg/e532db14da765435",
            "target_id": "i-037c8620444241951"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web_1",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_2_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:483259568624:targetgroup/techcorp-web-tg/e532db14da765435-20260403150118235500000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:483259568624:targetgroup/techcorp-web-tg/e532db14da765435",
            "target_id": "i-001a2b79412c46d1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web_2",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a5c7c274d72520f",
            "association_id": "eipassoc-01a80c6b8fb90475a",
            "connectivity_type": "public",
            "id": "nat-0adfc4025c3eb4a8c",
            "network_interface_id": "eni-072decf2f97332825",
            "private_ip": "10.0.1.235",
            "public_ip": "34.199.21.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ac4960cff6e71c4a",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-nat-gw-1",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-nat-gw-1",
              "Project": "techcorp"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0207e0dc7610f1843",
            "association_id": "eipassoc-0c512528f5acae9a6",
            "connectivity_type": "public",
            "id": "nat-0adaedd01937486e4",
            "network_interface_id": "eni-0f9b1a5b8440fea60",
            "private_ip": "10.0.2.129",
            "public_ip": "54.82.194.250",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ef66bf5a60d571d0",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-nat-gw-2",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-nat-gw-2",
              "Project": "techcorp"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:route-table/rtb-0f502a4e7acb008e2",
            "id": "rtb-0f502a4e7acb008e2",
            "owner_id": "483259568624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0adfc4025c3eb4a8c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-private-rt-1",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-private-rt-1",
              "Project": "techcorp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:route-table/rtb-04bd19c466b1d3fae",
            "id": "rtb-04bd19c466b1d3fae",
            "owner_id": "483259568624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0adaedd01937486e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-private-rt-2",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-private-rt-2",
              "Project": "techcorp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_2",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:route-table/rtb-0e9a12457fd5ff1e0",
            "id": "rtb-0e9a12457fd5ff1e0",
            "owner_id": "483259568624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac2622f627466cfb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-public-rt",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-public-rt",
              "Project": "techcorp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2121dd7426741ce",
            "route_table_id": "rtb-0f502a4e7acb008e2",
            "subnet_id": "subnet-03f4e90b749e3714d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a420147663b34c2",
            "route_table_id": "rtb-04bd19c466b1d3fae",
            "subnet_id": "subnet-0cfa69d37cfd0bc36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_2",
            "aws_route_table.private_2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097e7ede8ec8936e3",
            "route_table_id": "rtb-0e9a12457fd5ff1e0",
            "subnet_id": "subnet-0ac4960cff6e71c4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0661da8719d65814f",
            "route_table_id": "rtb-0e9a12457fd5ff1e0",
            "subnet_id": "subnet-0ef66bf5a60d571d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:security-group/sg-0ed39040ce9ff44c0",
            "description": "Allow HTTP and HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed39040ce9ff44c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "techcorp-alb-sg",
            "name_prefix": "",
            "owner_id": "483259568624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-alb-sg",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-alb-sg",
              "Project": "techcorp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:security-group/sg-03961e299e5fa2547",
            "description": "Allow SSH from my IP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03961e299e5fa2547",
            "ingress": [
              {
                "cidr_blocks": [
                  "105.127.14.53/32"
                ],
                "description": "SSH from my public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-bastion-sg",
            "name_prefix": "",
            "owner_id": "483259568624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-bastion-sg",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-bastion-sg",
              "Project": "techcorp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:security-group/sg-0a62df9b4fa4d1075",
            "description": "Allow PostgreSQL from web SG and SSH from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a62df9b4fa4d1075",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from Web SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eafe72a0764f0f3b"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03961e299e5fa2547"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-db-sg",
            "name_prefix": "",
            "owner_id": "483259568624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-db-sg",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-db-sg",
              "Project": "techcorp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:security-group/sg-0eafe72a0764f0f3b",
            "description": "Allow web traffic from ALB and SSH from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eafe72a0764f0f3b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed39040ce9ff44c0"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB SG",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed39040ce9ff44c0"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03961e299e5fa2547"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-web-sg",
            "name_prefix": "",
            "owner_id": "483259568624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-web-sg",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-web-sg",
              "Project": "techcorp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:subnet/subnet-03f4e90b749e3714d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f4e90b749e3714d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "483259568624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-private-subnet-1",
              "Project": "techcorp",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-private-subnet-1",
              "Project": "techcorp",
              "Tier": "private"
            },
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:subnet/subnet-0cfa69d37cfd0bc36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfa69d37cfd0bc36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "483259568624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-private-subnet-2",
              "Project": "techcorp",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-private-subnet-2",
              "Project": "techcorp",
              "Tier": "private"
            },
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:subnet/subnet-0ac4960cff6e71c4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac4960cff6e71c4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "483259568624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-public-subnet-1",
              "Project": "techcorp",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-public-subnet-1",
              "Project": "techcorp",
              "Tier": "public"
            },
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:subnet/subnet-0ef66bf5a60d571d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef66bf5a60d571d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "483259568624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-public-subnet-2",
              "Project": "techcorp",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-public-subnet-2",
              "Project": "techcorp",
              "Tier": "public"
            },
            "vpc_id": "vpc-03e12fdd09f4c2b53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483259568624:vpc/vpc-03e12fdd09f4c2b53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0399a55f2d3ac1a51",
            "default_route_table_id": "rtb-04364c1f1205ddaf3",
            "default_security_group_id": "sg-0d14178aaae2d0baf",
            "dhcp_options_id": "dopt-01318af585c6aa152",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e12fdd09f4c2b53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04364c1f1205ddaf3",
            "owner_id": "483259568624",
            "tags": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-vpc",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "Terraform",
              "Name": "techcorp-vpc",
              "Project": "techcorp"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}